0.10.0 (currently working on)
- [#4849] Fix: Unit test errors about missing constructor parameters
- [#4362] Fix: Skip the configuration check in the unit tests
- [#4361] Fix: Hide the time slot records in the BE lists
- [#4846] Bugfix: Crash in tx_seminars_ViewHelper_CommaSeparatedTitlesTest
- [#4818] Change: Drop the ExtJS back-end module
- [#4843] Cleanup: Drop the todo.txt file
- [#4833] Cleanup: Remove the closing PHP tags
- [#4661] Change: Sort speakers, places, organizers, etc. by title in the backend
- [#4653] Fix: Crash in BE in TYPO3 CMS 6.0.x
- [#4625] Cleanup: Fix all instances of "Underscores are not allowed in method names"
- [#4645] Fix: Crash when running the RegistrationManager unit tests in PHP 5.4.6
- [#4622] Fix: Unit test crash in the DefaultControllerTest PHP 5.4.6
- [#4631] Cleanup: Drop useless class comments
- [#4630] Cleanup: Update the copyright to 2013
- [#4623] Cleanup: Fix all instances of "Missing @return tag in function comment"
- [#4621] Fix: Event list crashes with PHP 5.4.6
- [#4603] Fix: Download CSV file is empty, thanks to Ton Tersteeg
- [#4504] Fix: Fix the function comment for registrationmanager::getLinkToRegistrationOrLoginPage and add a unit test
- [#4483] Fix: Dash gets escaped twice in the time-slot list in the single view
- [#4497] Change: Adapt the German label for the submit button to § 312g Abs. 3 BGB
- [#4485] Fix: Add TYPO3 maximum version to ext_emconf.php
- [#4481] Fix: Failing unit tests in tx_seminars_Mapper_EventTest and tx_seminars_Service_EMailSalutationTest
- [#4462] Fix: HTML tags are visible in the forms when using ameos_formidable 1.1.549
- [#4471] Fix: Double escape of date in "other dates" table in single view
- [#4467] Fix: Test failures and crashes in current Core master in tx_seminars_FrontEnd_DefaultControllerTest, tx_seminars_OldModel_RegistrationTest, tx_seminars_Service_RegistrationManagerTest